--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -7,9 +7,9 @@
     tools:context=".InfoFragment">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="467dp"
-        android:layout_height="732dp"
+        android:id="@+id/bg_info"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
