--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -10,8 +10,9 @@
         android:id="@+id/bg_dash"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="0sp"
+        android:layout_margin="0dp"
         android:src="@drawable/dashboard"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
