--- a/app/src/main/res/layout/food_cardview.xml
+++ b/app/src/main/res/layout/food_cardview.xml
@@ -30,29 +30,30 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/etImage"
-                android:layout_width="195dp"
-                android:layout_height="170dp"
+                android:layout_width="176dp"
+                android:layout_height="165dp"
                 android:layout_centerInParent="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/tvFood"
-                android:layout_width="196dp"
-                android:layout_height="35dp"
+                android:layout_width="212dp"
+                android:layout_height="32dp"
                 android:layout_below="@id/etImage"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="7dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginEnd="17dp"
-                android:layout_marginBottom="19dp"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="25dp"
                 android:autoSizeMaxTextSize="22dp"
                 android:autoSizeMinTextSize="20sp"
                 android:autoSizeTextType="uniform"
                 android:fontFamily="cursive"
                 android:gravity="center"
+                android:textAlignment="center"
                 android:textColor="#0C0000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
