--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,7 +31,7 @@
         android:layout_width="406dp"
         android:layout_height="75dp"
         android:fontFamily="cursive"
-        android:text="     Cravings!!🍴"
+        android:text="  Cravings!!🍴"
         android:textAlignment="center"
         android:textSize="55sp"
         android:textStyle="bold"
@@ -80,7 +80,7 @@
 
 
             <Button
-                android:id="@+id/cat1"
+                android:id="@+id/catStarter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -93,7 +93,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat2"
+                android:id="@+id/catChicken"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -106,7 +106,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat3"
+                android:id="@+id/catLamb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -119,7 +119,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat4"
+                android:id="@+id/catPasta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -132,7 +132,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat5"
+                android:id="@+id/catPork"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -145,7 +145,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat6"
+                android:id="@+id/catSeafood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -158,20 +158,20 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat7"
+                android:id="@+id/catSide"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:text="Sides"
+                android:text="Side"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
                 android:textSize="17sp"
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat8"
+                android:id="@+id/catBeef"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -184,7 +184,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat9"
+                android:id="@+id/catVegan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -197,7 +197,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat10"
+                android:id="@+id/catVegetarian"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -210,7 +210,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat11"
+                android:id="@+id/catBreakfast"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -223,7 +223,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat12"
+                android:id="@+id/catGoat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
@@ -236,9 +236,10 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat13"
+                android:id="@+id/catDessert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:text="Dessert"
@@ -248,7 +249,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/cat14"
+                android:id="@+id/catMiscellaneous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
