--- a/app/src/main/res/layout/food_cardview.xml
+++ b/app/src/main/res/layout/food_cardview.xml
@@ -72,7 +72,7 @@
                 android:layout_marginBottom="-4dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/buy_logo" />
+                app:srcCompat="@drawable/hungry" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
