added ripple effect for buttons

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -19,12 +19,12 @@
         android:textAlignment="center"
         android:textSize="50sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dashSearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintVertical_bias="0.209" />
 
     <TextView
         android:id="@+id/dashTitle1"
@@ -35,7 +35,7 @@
         android:textAlignment="center"
         android:textSize="55sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/dashSearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Starter"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Chicken"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -111,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Lamb"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -124,7 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Pasta"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Pork"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -150,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Seafood"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Side"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -176,7 +176,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Beef"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -189,7 +189,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Vegan"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -202,7 +202,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Vegetarian"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -215,7 +215,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Breakfast"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -228,7 +228,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Goat"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -241,7 +241,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Dessert"
                 android:textAlignment="center"
                 android:textColor="#FB2658"
@@ -255,7 +255,7 @@
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:background="@android:color/transparent"
+                android:background="@drawable/ripple_effect"
                 android:text="Miscellaneous"
                 android:textColor="#FB2658"
                 android:textSize="17sp"
