--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -44,7 +44,7 @@
 
     <SearchView
         android:id="@+id/dashSearch"
-        android:layout_width="367dp"
+        android:layout_width="347dp"
         android:layout_height="47dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
@@ -56,8 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339"
-        app:queryHint="Find your Cravings!!" />
+        app:layout_constraintVertical_bias="0.339" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
