--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,7 @@
             android:id="@+id/action_homeFragment_to_dashboardFragment"
             app:destination="@id/dashboardFragment"
             app:enterAnim="@anim/push_down_in"
-            app:popEnterAnim="@anim/push_down_in" />
+            app:popExitAnim="@anim/slide_up" />
     </fragment>
     <fragment
         android:id="@+id/dashboardFragment"
