--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@null"
     android:background="@drawable/home_screen"
-    android:scaleType="centerCrop"
     tools:context=".HomeFragment"
-    android:layout_margin="0dp"
     >
 
 
